Fix design and layout issues in context bar

--- a/source/component/context_bar/style.scss
+++ b/source/component/context_bar/style.scss
@@ -1,6 +1,7 @@
 // :copyright: Copyright (c) 2016 ftrack
 
 .context-bar {
+    flex-shrink: 0;
     padding: $spacing;
     display: flex;
     align-items: center;
@@ -9,7 +10,7 @@
         margin-right: $spacing-large;
     }
 
-    margin-bottom: $spacing;
     border-bottom: 1px solid $color-dark-400;
     font-size: $font-size-small;
+    height: 6.2rem;
 }
